tests/errors/E035.zen
bool main() {
    let wrong := -true;
    return !"Hello";
}